# baselion-regime-detector

./: README.md  pyproject.toml
src/baselion_regime/: __init__.py
